# finbert-rag-financial-intelligence

./: .gitignore  README.md  pyproject.toml
app/: streamlit_app.py
data/raw/regulatory_docs/: aml_kyc_requirements.txt  basel_iii_capital_requirements.txt  fca_conduct_rules.txt
notebooks/: 01_sentiment_finbert.ipynb  02_rag_pipeline.ipynb  03_finbert_finetuning.ipynb  04_evaluation.ipynb
scripts/: build_vectorstore.py
src/api/: main.py  schemas.py
src/rag/: ingestion.py  retriever.py  vectorstore.py
src/sentiment/: evaluator.py  model.py  trainer.py
tests/: test_ingestion.py  test_schemas.py
