[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finbert-rag"
version = "1.0.0"
description = "Financial sentiment analysis (FinBERT) + regulatory RAG pipeline"
requires-python = ">=3.11"

dependencies = [
    # NLP / HuggingFace
    "transformers>=4.40",
    "torch>=2.2",
    "datasets>=2.19",
    "sentence-transformers>=3.0",
    "accelerate>=0.30",
    # RAG
    "chromadb>=0.5",
    "langchain>=0.2",
    "langchain-community>=0.2",
    "langchain-huggingface>=0.0.3",
    # Data
    "pandas>=2.2",
    "numpy>=1.26",
    "yfinance>=0.2",
    "feedparser>=6.0",
    # API + serving
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    # Dashboard
    "streamlit>=1.35",
    "plotly>=5.22",
    # Evaluation
    "scikit-learn>=1.4",
    "evaluate>=0.4",
    "ragas>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
